--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "beemo eslint .",
     "prettier": "beemo prettier \"./{configs,dotfiles,scripts}/*.{js,json,md}\"",
     "test": "yarn run eslint",
+    "prerelease": "yarn test",
     "release": "np --no-cleanup --no-yarn"
   },
   "repository": {
@@ -35,17 +36,17 @@
     "last 2 versions"
   ],
   "dependencies": {
-    "@beemo/cli": "^0.16.0",
-    "@beemo/core": "^0.16.0",
-    "@beemo/driver-babel": "^0.16.0",
-    "@beemo/driver-eslint": "^0.16.0",
-    "@beemo/driver-jest": "^0.16.0",
-    "@beemo/driver-prettier": "^0.16.0",
-    "@beemo/driver-typescript": "^0.5.0",
+    "@beemo/cli": "^0.17.0",
+    "@beemo/core": "^0.17.0",
+    "@beemo/driver-babel": "^0.17.0",
+    "@beemo/driver-eslint": "^0.17.0",
+    "@beemo/driver-jest": "^0.17.0",
+    "@beemo/driver-prettier": "^0.17.0",
+    "@beemo/driver-typescript": "^0.6.0",
     "@types/jest": "^22.2.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-jest": "^22.4.3",
+    "babel-jest": "^22.4.4",
     "babel-loader": "^7.1.4",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-dev": "^2.0.1",
@@ -63,7 +64,7 @@
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-compat": "^2.2.0",
-    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jest": "^21.15.1",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-promise": "^3.7.0",
@@ -73,7 +74,7 @@
     "execa": "^0.10.0",
     "fs-extra": "^6.0.1",
     "gitbook-cli": "^2.3.2",
-    "jest": "^22.4.3",
+    "jest": "^22.4.4",
     "jest-runner-eslint": "^0.5.0",
     "np": "^2.20.1",
     "prettier": "^1.12.1",
