--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "eslint",
     "jest",
     "prettier",
-    "typescript",
-    "webpack"
+    "typescript"
   ],
   "scripts": {
     "eslint": "beemo eslint .",
@@ -47,7 +46,6 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-jest": "^23.0.1",
-    "babel-loader": "^7.1.4",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-dev": "^2.0.1",
     "babel-plugin-transform-export-extensions": "^6.22.0",
@@ -56,14 +54,13 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "^6.26.0",
-    "clean-webpack-plugin": "^0.1.19",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-babel": "^5.1.0",
-    "eslint-plugin-compat": "^2.3.0",
+    "eslint-plugin-compat": "^2.4.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
@@ -77,16 +74,14 @@
     "jest": "^23.1.0",
     "jest-runner-eslint": "^0.6.0",
     "np": "^3.0.4",
-    "prettier": "^1.13.4",
+    "prettier": "^1.13.5",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-test-renderer": "^16.4.0",
     "rimraf": "^2.6.2",
     "ts-jest": "^22.4.6",
     "typescript": "^2.9.1",
-    "typescript-eslint-parser": "^16.0.0",
-    "uglifyjs-webpack-plugin": "1.2.5",
-    "webpack": "^4.11.0"
+    "typescript-eslint-parser": "^16.0.0"
   },
   "beemo": {
     "module": "@local",
