--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@beemo/driver-jest": "^0.18.0",
     "@beemo/driver-prettier": "^0.18.0",
     "@beemo/driver-typescript": "^0.7.0",
+    "@types/enzyme": "^3.1.10",
     "@types/jest": "^23.0.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
