Updated Jest and Prettier.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "eslint": "beemo eslint .",
-    "prettier": "beemo prettier \"./{configs,dotfiles,scripts}/*.{js,json,md}\"",
+    "prettier": "beemo prettier \"./{configs,dotfiles,scripts}/*.{js,json,md,yml,yaml}\"",
     "test": "yarn run eslint",
     "prerelease": "yarn test",
     "release": "np --no-cleanup --no-yarn"
@@ -43,10 +43,10 @@
     "@beemo/driver-prettier": "^0.19.1",
     "@beemo/driver-typescript": "^0.8.1",
     "@types/enzyme": "^3.1.12",
-    "@types/jest": "^23.3.0",
+    "@types/jest": "^23.3.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-jest": "^23.4.0",
+    "babel-jest": "^23.4.2",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-dev": "^2.0.1",
     "babel-plugin-transform-export-extensions": "^6.22.0",
@@ -72,14 +72,14 @@
     "eslint-plugin-unicorn": "^4.0.3",
     "execa": "^0.10.0",
     "fs-extra": "^7.0.0",
-    "jest": "^23.4.1",
+    "jest": "^23.4.2",
     "jest-runner-eslint": "^0.6.0",
     "np": "^3.0.4",
-    "prettier": "^1.13.7",
+    "prettier": "^1.14.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-test-renderer": "^16.4.1",
-    "ts-jest": "^23.0.0",
+    "ts-jest": "^23.0.1",
     "typescript": "^2.9.2",
     "typescript-eslint-parser": "^16.0.1"
   },
