--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-test-renderer": "^16.4.2",
-    "ts-jest": "^23.0.1",
+    "ts-jest": "23.0.1",
     "typescript": "^2.9.2",
     "typescript-eslint-parser": "^16.0.1"
   },
