--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "prettier": "beemo prettier \"./{configs,dotfiles,scripts}/*.{js,json,md,yml,yaml}\"",
     "test": "yarn run eslint",
     "prerelease": "yarn test",
-    "release": "np --no-cleanup --no-yarn"
+    "release": "lerna publish"
   },
+  "workspaces": [
+    "packages/*"
+  ],
   "beemo": {
     "module": "@local/core",
     "drivers": [
@@ -21,5 +24,8 @@
         "promise/always-return": "off"
       }
     }
+  },
+  "dependencies": {
+    "lerna": "^3.2.1"
   }
 }
