--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -20,6 +20,9 @@
     "name": "Miles Johnson",
     "url": "http://milesj.me"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "license": "MIT",
   "dependencies": {
     "@types/enzyme": "^3.1.13",
