--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,6 +10,9 @@
     "name": "Miles Johnson",
     "url": "http://milesj.me"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "license": "MIT",
   "scripts": {
     "postinstall": "bash ./links.sh"
