--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -10,6 +10,9 @@
     "name": "Miles Johnson",
     "url": "http://milesj.me"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "license": "MIT",
   "dependencies": {
     "@beemo/cli": "^0.20.0",
