--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -15,15 +15,16 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@beemo/cli": "^0.20.0",
-    "@beemo/core": "^0.20.0",
-    "@beemo/driver-babel": "^0.20.0",
-    "@beemo/driver-eslint": "^0.20.0",
-    "@beemo/driver-jest": "^0.20.0",
-    "@beemo/driver-prettier": "^0.20.0",
-    "@beemo/driver-typescript": "^0.9.0",
-    "babel-core": "^6.26.3",
-    "eslint": "^5.4.0",
+    "@babel/core": "^7.0.0",
+    "@beemo/cli": "^0.21.1",
+    "@beemo/core": "^0.21.1",
+    "@beemo/driver-babel": "^0.21.1",
+    "@beemo/driver-eslint": "^0.21.1",
+    "@beemo/driver-jest": "^0.21.1",
+    "@beemo/driver-prettier": "^0.21.1",
+    "@beemo/driver-typescript": "^0.10.1",
+    "babel-core": "7.0.0-bridge.0",
+    "eslint": "^5.5.0",
     "jest": "^23.5.0",
     "prettier": "^1.14.2",
     "typescript": "^3.0.3"
