--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "milesj-root",
   "scripts": {
     "eslint": "beemo eslint .",
-    "prettier": "beemo prettier \"./{configs,dotfiles,scripts}/*.{js,json,md,yml,yaml}\"",
+    "prettier": "beemo prettier \"./packages/config/{configs,dotfiles,scripts}/*.{js,json,md,yml,yaml}\"",
     "test": "yarn run eslint",
     "prereleassse": "yarn test",
     "release": "lerna publish"
