--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -34,6 +34,7 @@
     "@babel/preset-typescript": "^7.0.0",
     "@types/enzyme": "^3.1.13",
     "@types/jest": "^23.3.1",
+    "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.4.2",
     "babel-plugin-transform-dev": "^2.0.1",
     "enzyme": "^3.5.0",
