--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/plugin-proposal-export-default-from": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
@@ -60,7 +61,6 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-test-renderer": "^16.4.2",
-    "ts-jest": "23.1.4",
     "typescript": "^3.0.3",
     "typescript-eslint-parser": "^18.0.0"
   }
