--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -41,6 +41,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.4.2",
     "babel-plugin-transform-dev": "^2.0.1",
+    "babel-plugin-typescript-to-proptypes": "^0.8.0",
     "enzyme": "^3.5.0",
     "enzyme-adapter-react-16": "^1.3.1",
     "enzyme-to-json": "^3.3.4",
