--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -59,7 +59,7 @@
     "eslint-plugin-unicorn": "^6.0.1",
     "execa": "^1.0.0",
     "fs-extra": "^7.0.1",
-    "jest": "^23.6.0",
+    "jest": "^24.0.0-alpha.9",
     "np": "^3.1.0",
     "prettier": "^1.15.3",
     "react-test-renderer": "^16.7.0",
