--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -25,7 +25,7 @@
     "@beemo/driver-typescript": "^0.13.1",
     "babel-core": "7.0.0-bridge.0",
     "eslint": "^5.10.0",
-    "jest": "^23.6.0",
+    "jest": "^24.0.0-alpha.9",
     "prettier": "^1.15.3",
     "typescript": "^3.2.2"
   }
