--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -53,7 +53,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.3",
-    "eslint-plugin-typescript": "^0.14.0",
+    "eslint-plugin-typescript": "^1.0.0-rc.3",
     "eslint-plugin-unicorn": "^6.0.1",
     "execa": "^1.0.0",
     "fs-extra": "^7.0.1",
@@ -61,8 +61,8 @@
     "np": "^3.1.0",
     "prettier": "^1.15.3",
     "react-test-renderer": "^16.7.0",
-    "typescript": "^3.2.2",
-    "typescript-eslint-parser": "^21.0.2"
+    "typescript": "^3.2.4",
+    "typescript-eslint-parser": "^22.0.0"
   },
   "devDependencies": {
     "react": "^16.7.0",
