--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -38,6 +38,8 @@
     "@babel/preset-typescript": "^7.1.0",
     "@types/enzyme": "^3.1.15",
     "@types/jest": "^23.3.13",
+    "@typescript-eslint/eslint-plugin": "^1.0.0",
+    "@typescript-eslint/parser": "^1.0.0",
     "babel-plugin-transform-dev": "^2.0.1",
     "babel-plugin-typescript-to-proptypes": "^0.16.0",
     "enzyme": "^3.8.0",
@@ -53,7 +55,6 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-typescript": "^1.0.0-rc.3",
     "eslint-plugin-unicorn": "^7.0.0",
     "execa": "^1.0.0",
     "fs-extra": "^7.0.1",
@@ -61,8 +62,7 @@
     "np": "^3.1.0",
     "prettier": "^1.16.0",
     "react-test-renderer": "^16.7.0",
-    "typescript": "^3.2.4",
-    "typescript-eslint-parser": "^22.0.0"
+    "typescript": "^3.2.4"
   },
   "devDependencies": {
     "react": "^16.7.0",
