--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -43,7 +43,7 @@
     "babel-plugin-transform-dev": "^2.0.1",
     "babel-plugin-typescript-to-proptypes": "^0.16.0",
     "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.7.1",
+    "enzyme-adapter-react-16": "^1.8.0",
     "enzyme-to-json": "^3.3.5",
     "eslint": "^5.12.1",
     "eslint-config-airbnb": "^17.1.0",
@@ -52,20 +52,18 @@
     "eslint-plugin-compat": "^2.6.3",
     "eslint-plugin-import": "^2.15.0",
     "eslint-plugin-jest": "^22.1.3",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-jsx-a11y": "^6.2.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-unicorn": "^7.1.0",
     "execa": "^1.0.0",
     "fs-extra": "^7.0.1",
-    "jest": "^24.0.0-alpha.11",
-    "np": "^4.0.1",
+    "jest": "^24.0.0",
+    "np": "^4.0.2",
     "prettier": "^1.16.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-test-renderer": "^16.7.0",
     "typescript": "^3.2.4"
-  },
-  "devDependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0"
   }
 }
