--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -24,7 +24,7 @@
     "@beemo/driver-prettier": "^0.26.0",
     "@beemo/driver-typescript": "^0.15.1",
     "eslint": "^5.12.1",
-    "jest": "^24.0.0-alpha.11",
+    "jest": "^24.0.0",
     "prettier": "^1.16.1",
     "typescript": "^3.2.4"
   }
