--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -36,10 +36,10 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
-    "@types/enzyme": "^3.1.16",
+    "@types/enzyme": "^3.1.17",
     "@types/jest": "^24.0.0",
-    "@typescript-eslint/eslint-plugin": "^1.2.0",
-    "@typescript-eslint/parser": "^1.2.0",
+    "@typescript-eslint/eslint-plugin": "~1.3.0",
+    "@typescript-eslint/parser": "~1.3.0",
     "babel-plugin-transform-dev": "^2.0.1",
     "babel-plugin-typescript-to-proptypes": "^0.17.0",
     "enzyme": "^3.8.0",
@@ -49,7 +49,7 @@
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-compat": "^2.6.3",
+    "eslint-plugin-compat": "^2.7.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jest": "^22.2.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
@@ -64,6 +64,6 @@
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-test-renderer": "^16.8.1",
-    "typescript": "^3.3.1"
+    "typescript": "~3.3.1"
   }
 }
