--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -36,8 +36,8 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
-    "@types/enzyme": "^3.1.17",
-    "@types/jest": "^24.0.0",
+    "@types/enzyme": "^3.1.18",
+    "@types/jest": "^24.0.4",
     "@typescript-eslint/eslint-plugin": "~1.3.0",
     "@typescript-eslint/parser": "~1.3.0",
     "babel-plugin-transform-dev": "^2.0.1",
@@ -55,6 +55,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^1.0.1",
     "eslint-plugin-unicorn": "^7.1.0",
     "execa": "^1.0.0",
     "fs-extra": "^7.0.1",
