--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -16,13 +16,13 @@
   "license": "MIT",
   "dependencies": {
     "@babel/core": "^7.3.4",
-    "@beemo/cli": "^0.27.1",
-    "@beemo/core": "^0.27.3",
-    "@beemo/driver-babel": "^0.27.1",
-    "@beemo/driver-eslint": "^0.27.1",
-    "@beemo/driver-jest": "^0.27.1",
-    "@beemo/driver-prettier": "^0.27.1",
-    "@beemo/driver-typescript": "^0.16.2",
+    "@beemo/cli": "^1.0.0-alpha.0",
+    "@beemo/core": "^1.0.0-alpha.0",
+    "@beemo/driver-babel": "^1.0.0-alpha.0",
+    "@beemo/driver-eslint": "^1.0.0-alpha.0",
+    "@beemo/driver-jest": "^1.0.0-alpha.0",
+    "@beemo/driver-prettier": "^1.0.0-alpha.0",
+    "@beemo/driver-typescript": "^1.0.0-alpha.0",
     "eslint": "^5.15.1",
     "jest": "^24.3.1",
     "prettier": "^1.16.4",
