--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -38,6 +38,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@types/enzyme": "^3.9.1",
+    "@types/jest": "^24.0.11",
     "@typescript-eslint/eslint-plugin": "~1.6.0",
     "@typescript-eslint/parser": "~1.6.0",
     "babel-plugin-transform-dev": "^2.0.1",
