--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -16,13 +16,13 @@
   "license": "MIT",
   "dependencies": {
     "@babel/core": "^7.4.4",
-    "@beemo/cli": "^1.0.0-alpha.7",
-    "@beemo/core": "^1.0.0-alpha.8",
-    "@beemo/driver-babel": "^1.0.0-alpha.3",
-    "@beemo/driver-eslint": "^1.0.0-alpha.7",
-    "@beemo/driver-jest": "^1.0.0-alpha.5",
-    "@beemo/driver-prettier": "^1.0.0-alpha.6",
-    "@beemo/driver-typescript": "^1.0.0-alpha.4",
+    "@beemo/cli": "^1.0.0",
+    "@beemo/core": "^1.0.0",
+    "@beemo/driver-babel": "^1.0.0",
+    "@beemo/driver-eslint": "^1.0.0",
+    "@beemo/driver-jest": "^1.0.0",
+    "@beemo/driver-prettier": "^1.0.0",
+    "@beemo/driver-typescript": "^1.0.0",
     "eslint": "^5.16.0",
     "jest": "^24.8.0",
     "prettier": "^1.17.1",
