--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,5 +20,9 @@
   "dependencies": {
     "@milesj/build-tool-config": "^0.181.1",
     "@milesj/build-tool-runtime": "^0.52.0"
+  },
+  "funding": {
+    "type": "ko-fi",
+    "url": "https://ko-fi.com/milesjohnson"
   }
 }
