--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "name": "milesj-root",
   "scripts": {
+    "prepare": "beemo create-config --silent",
     "build": "beemo run-script build",
     "eslint": "beemo eslint ./packages/config",
     "jest": "beemo jest",
