--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -52,15 +52,17 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.3.0",
     "eslint-plugin-unicorn": "^13.0.0",
-    "execa": "^3.2.0",
+    "execa": "^3.3.0",
     "fast-glob": "^3.1.0",
     "fs-extra": "^8.1.0",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-test-renderer": "^16.11.0",
     "typescript": "^3.7.2"
+  },
+  "devDependencies": {
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-test-renderer": "^16.12.0"
   },
   "funding": {
     "type": "ko-fi",
