--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,7 +15,7 @@
   },
   "license": "MIT",
   "scripts": {
-    "postinstall": "bash ./link.sh"
+    "postinstall": "node ./link.js"
   },
   "dependencies": {
     "@milesj/build-tool-config": "^0.182.0",
