--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -12,6 +12,7 @@
     "prettier",
     "typescript"
   ],
+  "main": "./lib/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/milesj/build-tool-config.git"
