--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
       "rules": {
         "no-var": "off",
         "no-console": "off",
-        "promise/always-return": "off"
+        "promise/always-return": "off",
+        "import/no-extraneous-dependencies": "off"
       }
     }
   },
@@ -39,5 +40,9 @@
   ],
   "publishConfig": {
     "access": "public"
+  },
+  "devDependencies": {
+    "@types/fs-extra": "^8.0.1",
+    "@types/semver": "^6.2.0"
   }
 }
