--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,21 @@
 .vscode/
 node_modules/
-
 .eslintrc.js
 .eslintignore
 .prettierignore
 prettier.config.js
 test.log
-tsconfig.json
 tsconfig.eslint.json
 yarn-error.log
 babel.config.js
 jest.config.js
+*.tsbuildinfo
 
 # Symlinks
 packages/core/configs
 packages/core/scripts
 packages/core/templates
+
+# Ignore for local dev
+*.d.ts
+*.d.ts.map
