--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@types/semver": "^6.2.0",
     "lerna": "^3.20.2"
   },
+  "dependencies": {
+    "@yarnpkg/pnpify": "^2.0.0-rc.16"
+  },
   "workspaces": [
     "packages/*"
   ],
