--- a/package.json
+++ b/package.json
@@ -14,13 +14,11 @@
   "devDependencies": {
     "@types/fs-extra": "^8.0.1",
     "@types/semver": "^6.2.0",
+    "@yarnpkg/pnpify": "^2.0.0-rc.16",
     "eslint": "^6.8.0",
     "lerna": "^3.20.2",
     "prettier": "^1.19.1",
     "typescript": "^3.7.5"
-  },
-  "dependencies": {
-    "@yarnpkg/pnpify": "^2.0.0-rc.16"
   },
   "workspaces": [
     "packages/*"
