deps(beemo): Update to latest.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "name": "milesj-root",
+  "version": "0.0.0",
   "scripts": {
     "prepare": "beemo create-config --silent",
     "build": "beemo typescript --build --reference-workspaces",
