--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,6 +17,9 @@
   "scripts": {
     "postinstall": "node ./link.js"
   },
+  "engines": {
+    "node": ">=10.10.0"
+  },
   "dependencies": {
     "@milesj/build-tool-config": "^1.1.0",
     "@milesj/build-tool-runtime": "^1.1.0"
