--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -53,9 +53,11 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
+    "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-unicorn": "^17.2.0",
     "execa": "^4.0.0",
     "fast-glob": "^3.2.2",
