--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -26,7 +26,7 @@
     "@beemo/driver-jest": "^1.2.3",
     "@beemo/driver-prettier": "^1.3.2",
     "@beemo/driver-typescript": "^1.3.4",
-    "eslint": "^7.2.0",
+    "eslint": "7.2.0",
     "jest": "^26.0.1",
     "prettier": "^2.0.5",
     "typescript": "^3.9.5"
