new(eslint): Add import sorting.

--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -41,6 +41,7 @@
     "@typescript-eslint/parser": "^4.11.1",
     "babel-plugin-transform-dev": "^2.0.1",
     "babel-plugin-typescript-to-proptypes": "^1.4.2",
+    "builtin-modules": "^3.2.0",
     "eslint": "^7.16.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^7.1.0",
@@ -54,6 +55,7 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unicorn": "^25.0.1",
     "execa": "^4.1.0",
     "fast-glob": "^3.2.4",
