--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,12 @@
 {
-  "compilerOptions": {
-    "allowJs": false,
-    "allowSyntheticDefaultImports": true,
-    "declaration": true,
-    "esModuleInterop": true,
-    "experimentalDecorators": false,
-    "forceConsistentCasingInFileNames": true,
-    "lib": [
-      "esnext"
-    ],
-    "module": "commonjs",
-    "noEmitOnError": true,
-    "noImplicitReturns": true,
-    "pretty": true,
-    "removeComments": false,
-    "resolveJsonModule": true,
-    "sourceMap": false,
-    "strict": true,
-    "target": "es2018",
-    "useDefineForClassFields": false,
-    "outDir": "./lib"
-  },
-  "include": [
-    "./src/**/*",
-    "./types/**/*"
+  "extends": "./tsconfig.options.json",
+  "files": [],
+  "references": [
+    {
+      "path": "packages/config"
+    },
+    {
+      "path": "packages/config/tests"
+    }
   ]
 }
