--- a/tsconfig.options.json
+++ b/tsconfig.options.json
@@ -15,6 +15,7 @@
     "pretty": true,
     "removeComments": false,
     "resolveJsonModule": true,
+    "skipLibCheck": true,
     "sourceMap": false,
     "strict": true,
     "target": "es2018",
