--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -15,17 +15,17 @@
   },
   "license": "MIT",
   "engines": {
-    "node": ">=10.10.0"
+    "node": ">=10.3.0"
   },
   "dependencies": {
     "@babel/core": "^7.13.1",
-    "@beemo/cli": "^1.0.11",
-    "@beemo/core": "^1.1.8",
-    "@beemo/driver-babel": "^1.2.6",
-    "@beemo/driver-eslint": "^1.2.3",
-    "@beemo/driver-jest": "^1.2.3",
-    "@beemo/driver-prettier": "^1.3.2",
-    "@beemo/driver-typescript": "^1.4.1",
+    "@beemo/cli": "^2.0.0-alpha.2",
+    "@beemo/core": "^2.0.0-alpha.4",
+    "@beemo/driver-babel": "^2.0.0-alpha.3",
+    "@beemo/driver-eslint": "^2.0.0-alpha.3",
+    "@beemo/driver-jest": "^2.0.0-alpha.2",
+    "@beemo/driver-prettier": "^2.0.0-alpha.2",
+    "@beemo/driver-typescript": "^2.0.0-alpha.3",
     "eslint": "^7.20.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
