deps(babel): Update to v7.13 latest.

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ jest.config.js
 *.tsbuildinfo
 
 # Symlinks
-packages/core/lib
+packages/core/src
 packages/core/templates
 
 # Ignore for local dev
