deps(typescript): Update to v4.2.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,12 @@
     },
     {
       "path": "packages/config/tests"
+    },
+    {
+      "path": "packages/core"
+    },
+    {
+      "path": "packages/runtime"
     }
   ]
 }
