--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lerna": "^4.0.0"
   },
   "workspaces": [
-    "packages/config"
+    "packages/*"
   ],
   "publishConfig": {
     "access": "public"
