--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@milesj/build-tool-runtime",
-  "version": "2.14.0",
+  "version": "3.0.0-alpha.0",
   "description": "Build tool runtimes for shared configurations.",
   "repository": {
     "type": "git",
