deps(beemo): Update to latest.

--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -19,13 +19,13 @@
   },
   "dependencies": {
     "@babel/core": "^7.13.8",
-    "@beemo/cli": "^2.0.0-alpha.2",
-    "@beemo/core": "^2.0.0-alpha.4",
-    "@beemo/driver-babel": "^2.0.0-alpha.3",
-    "@beemo/driver-eslint": "^2.0.0-alpha.3",
-    "@beemo/driver-jest": "^2.0.0-alpha.2",
-    "@beemo/driver-prettier": "^2.0.0-alpha.2",
-    "@beemo/driver-typescript": "^2.0.0-alpha.3",
+    "@beemo/cli": "^2.0.0-rc.1",
+    "@beemo/core": "^2.0.0-rc.1",
+    "@beemo/driver-babel": "^2.0.0-rc.1",
+    "@beemo/driver-eslint": "^2.0.0-rc.1",
+    "@beemo/driver-jest": "^2.0.0-rc.0",
+    "@beemo/driver-prettier": "^2.0.0-rc.1",
+    "@beemo/driver-typescript": "^2.0.0-rc.1",
     "eslint": "^7.21.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
