--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "release": "lerna publish"
   },
   "devDependencies": {
-    "@types/fs-extra": "^9.0.8",
+    "@types/eslint": "^7.2.9",
+    "@types/fs-extra": "^9.0.11",
     "@types/semver": "^7.3.4",
     "lerna": "^4.0.0"
   },
